[gd_scene load_steps=38 format=3 uid="uid://pqca05bjsioj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_k12wf"]
[ext_resource type="Script" path="res://scripts/character_components/move.gd" id="2_i2kvp"]
[ext_resource type="Theme" uid="uid://dexdmgrhrsh0h" path="res://ui/base_theme.tres" id="3_dwfqp"]
[ext_resource type="Texture2D" uid="uid://dcewmbibext8a" path="res://textures/character.tres" id="3_giihc"]
[ext_resource type="PackedScene" uid="uid://yjm5uou5xda6" path="res://scenes/utils/skin_selector.tscn" id="3_i5um2"]
[ext_resource type="Curve" uid="uid://bsmauv7uso37c" path="res://character_accel_curve.tres" id="3_kmmnc"]
[ext_resource type="SpriteFrames" uid="uid://cnks8rtf72hwo" path="res://frames/angry.tres" id="4_3ici7"]
[ext_resource type="Gradient" uid="uid://ekxog0032hd3" path="res://character_color_ramp.tres" id="4_icml0"]
[ext_resource type="Shape2D" uid="uid://d1enhgygmn6ng" path="res://collision_shapes/character.tres" id="4_q6s4o"]
[ext_resource type="SpriteFrames" uid="uid://br50i31awextu" path="res://frames/focus.tres" id="4_sfpf4"]
[ext_resource type="Script" path="res://scripts/character_components/trail.gd" id="5_8r3re"]
[ext_resource type="Script" path="res://scenes/player/berserk_presentation.gd" id="5_svqj4"]
[ext_resource type="PackedScene" uid="uid://wtb0bpq1j403" path="res://scenes/utils/camera_2d.tscn" id="5_uwxc7"]
[ext_resource type="Script" path="res://scripts/character_components/focus_presentation.gd" id="6_xc7b0"]
[ext_resource type="Script" path="res://scripts/utils/camera_2d.gd" id="6_ywwtg"]
[ext_resource type="Script" path="res://scripts/character_components/stun_presentation.gd" id="8_olylb"]
[ext_resource type="Script" path="res://scripts/character_components/collect.gd" id="8_vwmd1"]
[ext_resource type="Script" path="res://scripts/character_components/weapon_slot.gd" id="9_xv6n2"]
[ext_resource type="SpriteFrames" uid="uid://cm1dtjptlgsup" path="res://frames/stun.tres" id="10_jj4yi"]
[ext_resource type="Script" path="res://scripts/character_components/weapon_adder.gd" id="10_mo5pi"]
[ext_resource type="Script" path="res://scripts/character_components/detect_spikes.gd" id="11_y2khf"]
[ext_resource type="Script" path="res://addons/thoth/thoth_gamestate.gd" id="13_4rph6"]
[ext_resource type="Texture2D" uid="uid://oenbp7enbwix" path="res://assets/exp.png" id="13_22dfr"]
[ext_resource type="PackedScene" uid="uid://b7pignom5x4cu" path="res://scenes/ui/upgrade_icon_list.tscn" id="13_88p0l"]
[ext_resource type="Texture2D" uid="uid://c4uqrxfr3q11o" path="res://assets/Undead Survivor/Sprites/UI.png" id="20_r37iv"]
[ext_resource type="FontFile" uid="uid://cmg4b2lpdwgfr" path="res://assets/joystix monospace.otf" id="21_fgwt4"]
[ext_resource type="Script" path="res://scripts/ui/dead_enemy_counter.gd" id="22_sqs02"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x1x03"]
gradient = ExtResource("4_icml0")

[sub_resource type="Curve" id="Curve_cbkro"]
_data = [Vector2(0, 0.243942), 0.0, 0.0, 0, 0, Vector2(0.997845, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vn8u2"]
curve = SubResource("Curve_cbkro")

[sub_resource type="CurveTexture" id="CurveTexture_c00sf"]
curve = ExtResource("3_kmmnc")

[sub_resource type="Curve" id="Curve_yqtah"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0.905493), 0.0, 0.0, 0, 0, Vector2(0.997845, 0.747981), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_dfs3s"]
curve = SubResource("Curve_yqtah")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qh1xy"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
linear_accel_curve = SubResource("CurveTexture_c00sf")
scale_min = 9.96
scale_max = 9.96
scale_curve = SubResource("CurveTexture_dfs3s")
color_ramp = SubResource("GradientTexture1D_x1x03")
hue_variation_min = -0.1
hue_variation_max = -0.1
hue_variation_curve = SubResource("CurveTexture_vn8u2")

[sub_resource type="CircleShape2D" id="CircleShape2D_fdet2"]
radius = 335.001

[sub_resource type="CircleShape2D" id="CircleShape2D_xmfvp"]
radius = 1017.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i534i"]
texture = ExtResource("13_22dfr")
texture_margin_right = 113.0
region_rect = Rect2(0, 0, 465, 32)

[node name="Character" type="Node2D" node_paths=PackedStringArray("default_target")]
script = ExtResource("1_k12wf")
speed_on_nonstop = 250
speed = 1200.0
attack = 1000.0
invincibility_time = 0.0
focus_scale = 1.0
default_target = NodePath("DefaultTarget")

[node name="DefaultTarget" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1060)

[node name="GPUParticles2D" type="GPUParticles2D" parent="." node_paths=PackedStringArray("skins", "character")]
position = Vector2(-13, -13)
amount = 10
process_material = SubResource("ParticleProcessMaterial_qh1xy")
texture = ExtResource("3_giihc")
lifetime = 0.3
script = ExtResource("5_8r3re")
skins = NodePath("../CharacterBody2D/Presentation/Skins")
character = NodePath("..")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(984, 9)
scale = Vector2(1, 0.96)
amount = 7
lifetime = 0.7
draw_order = 1
texture = ExtResource("3_giihc")
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
linear_accel_min = 30.0
linear_accel_max = 30.0
linear_accel_curve = ExtResource("3_kmmnc")
scale_amount_min = 10.0
scale_amount_max = 10.0
color_ramp = ExtResource("4_icml0")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_mask = 33
motion_mode = 1
script = ExtResource("2_i2kvp")

[node name="Presentation" type="Node2D" parent="CharacterBody2D"]
unique_name_in_owner = true

[node name="Skins" parent="CharacterBody2D/Presentation" instance=ExtResource("3_i5um2")]
unique_name_in_owner = true
position = Vector2(0, 0)

[node name="BerserkPresentation" type="AnimatedSprite2D" parent="CharacterBody2D/Presentation" node_paths=PackedStringArray("character")]
modulate = Color(1, 1, 1, 0)
position = Vector2(50, -50)
scale = Vector2(10, 10)
sprite_frames = ExtResource("4_3ici7")
script = ExtResource("5_svqj4")
character = NodePath("../../..")

[node name="FocusPresentation" type="AnimatedSprite2D" parent="CharacterBody2D/Presentation"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(-19, 8)
scale = Vector2(10, 10)
sprite_frames = ExtResource("4_sfpf4")
autoplay = "default"
script = ExtResource("6_xc7b0")

[node name="StunPresentation" type="AnimatedSprite2D" parent="CharacterBody2D/Presentation"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(11, -32)
scale = Vector2(10, 10)
sprite_frames = ExtResource("10_jj4yi")
autoplay = "default"
frame_progress = 0.823185
script = ExtResource("8_olylb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-4, 47)
shape = ExtResource("4_q6s4o")

[node name="Health" type="Control" parent="CharacterBody2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -149.0
offset_top = -151.0
offset_right = 151.0
offset_bottom = -111.0

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.993)
theme = ExtResource("3_dwfqp")
theme_override_font_sizes/font_size = 36
metadata/_edit_use_anchors_ = true

[node name="Camera2D" parent="CharacterBody2D" instance=ExtResource("5_uwxc7")]
zoom = Vector2(1, 1)
script = ExtResource("6_ywwtg")

[node name="AudioListener2D" type="AudioListener2D" parent="CharacterBody2D"]

[node name="CollectArea2D" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("8_vwmd1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/CollectArea2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_fdet2")

[node name="WeaponSlots" type="Node2D" parent="CharacterBody2D" node_paths=PackedStringArray("weapon_owner")]
unique_name_in_owner = true
script = ExtResource("9_xv6n2")
weapon_owner = NodePath("../..")

[node name="Slot1" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(-165, -150)

[node name="Slot2" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(165, -150)

[node name="Slot3" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(215, 100)

[node name="Slot4" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(-215, 100)

[node name="Slot5" type="Node2D" parent="CharacterBody2D/WeaponSlots"]
position = Vector2(0, 200)

[node name="TargetArea2D" type="Area2D" parent="CharacterBody2D"]
collision_layer = 0
collision_mask = 142

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/TargetArea2D"]
shape = SubResource("CircleShape2D_xmfvp")

[node name="WeaponAdder" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("10_mo5pi")

[node name="RichTextLabel" type="RichTextLabel" parent="CharacterBody2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpikeDetector" type="Area2D" parent="CharacterBody2D"]
position = Vector2(-3, 47)
collision_layer = 0
collision_mask = 64
script = ExtResource("11_y2khf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/SpikeDetector"]
shape = ExtResource("4_q6s4o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Exp" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -53.0
offset_right = -1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Exp"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.08
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dwfqp")
theme_override_font_sizes/font_size = 36
theme_override_styles/fill = SubResource("StyleBoxTexture_i534i")
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Control" parent="CanvasLayer" instance=ExtResource("13_88p0l")]

[node name="Counter" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="NinePatchRect" parent="CanvasLayer/Counter"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3716.0
offset_top = 1886.0
offset_right = 3756.0
offset_bottom = 1926.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
texture = ExtResource("20_r37iv")
region_rect = Rect2(0, 75.8017, 8.13274, 8.38628)

[node name="Counter" type="Label" parent="CanvasLayer/Counter"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3588.0
offset_top = 1884.0
offset_right = 3694.0
offset_bottom = 2038.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("21_fgwt4")
theme_override_font_sizes/font_size = 128
text = "0
"
script = ExtResource("22_sqs02")

[node name="Savestate" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_4rph6")

[connection signal="on_focus_changed" from="." to="CharacterBody2D/Presentation/FocusPresentation" method="_on_character_on_focus_changed"]
[connection signal="on_stun_changed" from="." to="CharacterBody2D/Presentation/StunPresentation" method="_on_character_on_stun_changed"]
[connection signal="on_skin_changed" from="CharacterBody2D/Presentation/Skins" to="CPUParticles2D" method="_on_skins_on_skin_changed"]
[connection signal="area_entered" from="CharacterBody2D/CollectArea2D" to="CharacterBody2D/CollectArea2D" method="_on_area_entered"]
[connection signal="body_entered" from="CharacterBody2D/TargetArea2D" to="." method="_on_target_area_2d_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/TargetArea2D" to="." method="_on_target_area_2d_body_exited"]
[connection signal="body_shape_entered" from="CharacterBody2D/SpikeDetector" to="CharacterBody2D/SpikeDetector" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="CharacterBody2D/SpikeDetector" to="CharacterBody2D/SpikeDetector" method="_on_body_shape_exited"]
